--- a/abdp.Web/Views/MaintenanceCategory/Index.cshtml
+++ b/abdp.Web/Views/MaintenanceCategory/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model abdp.Web.Models.MaintenanceCategoryViewModel
+
 @{
     ViewBag.Title = "Maintenance Category";
 }
@@ -13,3 +14,40 @@
         @Model.MaintenanceCategoryName
     }
 </h2>
+
+@*<table id="myTable" class="table table-striped table-bordered display" width="100%">*@
+<div class="col-md-12">
+    <table id="myDataTable" class="display nowrap" style="width:100%">
+        <thead>
+            <tr>
+                <th width="120px">Category Name</th>
+                <th width="220px">Remarks</th>
+                <th width="110px">Created By</th>
+                <th width="110px">Created Date</th>
+                <th width="100px">Status</th>
+                <th width="110px">Action</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            function LoadDataTale() {
+                $('#myDataTable').each(function () {
+                    var oDataTable = $(this).dataTale({
+                        fixedHeader: {
+                            header: true,
+                            footer: true,
+                            headerOffset: 50
+                        }
+                    });
+                });
+            }
+
+            LoadDataTable();
+        });
+    </script>
+}
+
