--- a/abdp.Web/Views/MaintenanceCategory/Index.cshtml
+++ b/abdp.Web/Views/MaintenanceCategory/Index.cshtml
@@ -17,7 +17,7 @@
 
 @*<table id="myTable" class="table table-striped table-bordered display" width="100%">*@
 <div class="col-md-12">
-    <table id="myDataTable" class="table table-striped display nowrap" style="width:100%">
+    <table id="MainDataTable" class="table table-striped table-bordered display nowrap" style="width:100%">
         <thead>
             <tr>
                 <th width="120px">Category Name</th>
@@ -31,10 +31,11 @@
     </table>
 </div>
 
-@section Scripts {
+@section Scripts
+{
     <script>
         function LoadDataTable() {
-            $('#myDataTable').each(function () {
+            $('#MainDataTable').each(function () {
                 var oDataTable = $(this).dataTable({
                     "bServerSide"     : true,
                     "bProcessing"     : true,
